Update deno.json to include new Supabase commands and refactor config.toml to define multiple function entries with improved structure. Replace identify-worker implementation with wrapWorker for better maintainability. Remove obsolete partnerx-worker file to streamline the codebase.

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,10 @@
 {
   "lock": false,
   "tasks": {
-    "dev": "npx supabase functions serve --no-verify-jwt",
+    "sb:start": "npx supabase start",
+    "sb:stop": "npx supabase stop",
+    "sb:local": "npx supabase functions serve --no-verify-jwt",
+    "sb:deploy": "npx supabase functions deploy",
     "test": "deno test -A",
     "fmt": "deno fmt",
     "lint": "deno lint"
