--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -348,13 +348,44 @@ s3_access_key = "env(S3_ACCESS_KEY)"
 # Configures AWS_SECRET_ACCESS_KEY for S3 bucket
 s3_secret_key = "env(S3_SECRET_KEY)"
 
-[functions.test]
+[functions.api-rules]
 enabled = true
 verify_jwt = true
-import_map = "./functions/test/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/test/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/test/*.html" ]
+import_map = "../deno.json"
+entrypoint = "./functions/api-rules/index.ts"
+
+[functions.api-submit]
+enabled = true
+verify_jwt = true
+import_map = "../deno.json"
+entrypoint = "./functions/api-submit/index.ts"
+
+[functions.identify-worker]
+enabled = true
+verify_jwt = true
+import_map = "../deno.json"
+entrypoint = "./functions/identify-worker/index.ts"
+
+[functions.dealer-worker]
+enabled = true
+verify_jwt = true
+import_map = "../deno.json"
+entrypoint = "./functions/dealer-worker/index.ts"
+
+[functions.queue-metrics]
+enabled = true
+verify_jwt = true
+import_map = "../deno.json"
+entrypoint = "./functions/queue-metrics/index.ts"
+
+[functions.router-worker]
+enabled = true
+verify_jwt = true
+import_map = "../deno.json"
+entrypoint = "./functions/router-worker/index.ts"
+
+[functions.rule-compiler]
+enabled = true
+verify_jwt = true
+import_map = "../deno.json"
+entrypoint = "./functions/rule-compiler/index.ts"
