Added supervisor steps

--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
     "login": "npx supabase login",
     "start": "npx supabase start",
     "stop": "npx supabase stop",
-    "local": "npx supabase functions serve --no-verify-jwt",
+    "dev": "npx supabase functions serve --no-verify-jwt",
     "deploy": "npx supabase functions deploy",
     "link": "npx supabase link",
     "db:push": "npx supabase db push",
